# AI-Connect-4-

./: README.md  connect4.py  connect4deepnetwork.py  medium_model.pth
backend/: __init__.py  app.py  connect4.py  connect4deepnetwork.py  easy_model.pth  pyproject.toml
backend/model/: connect4.py  connect4deepnetwork.py  hard_model.pth  model_benchmarks.py
frontend/: package-lock.json
frontend/src/: App.css  App.js
frontend/src/components/: Board.jsx  Slot.jsx  sample.css  sample.js
model/: connect4.py  hard_model.pth
